--- a/src/main/webapp/src/app.scss
+++ b/src/main/webapp/src/app.scss
@@ -1,3 +1,5 @@
+@import 'bootstrap/scss/bootstrap';
+
 .app-container {
   height: 100vh;
   width: 100vw;
@@ -69,4 +71,3 @@
   height: 100%;
   width: 100%;
 }
-
